added calendar module
